# mvp_powerAutomate

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  config.yaml  pyproject.toml  requirements.txt
.scars/: README.md  template.md
.scars/candidates/: example-first-scar.md  pydantic-settings-init-beats-env.md
docs/: ARCHITECTURE.md  MANUAL_OPERATIVO.md  MANUAL_TECNICO.md  RUNBOOK.md  SDD.md  TDD.md
docs/adr/: ADR-001-clean-architecture.md  ADR-002-power-automate-orquestador.md  ADR-003-contrato-cli-fastapi.md  ADR-004-excel-persistencia.md  ADR-005-repository-pattern.md  ADR-006-strategy-motor-pdf.md  ADR-007-docker-compose.md
docs/diagrams/: README.md
logs/: permits.log.2026-07-21
power_automate/: FLOW.md  error_handling.md
power_automate/screenshots/: README.md
sample_data/emails/: correo_ejemplo.eml
sample_data/expected_output/: _stdout_success.json  _stdout_validation_error.json
scripts/: generate_sample_pdf.py  run_api.ps1  run_api.sh  run_sample.ps1  run_sample.sh
src/permits/adapters/: contract.py
src/permits/application/dto/: permit_dto.py  process_request.py  process_response.py
src/permits/application/use_cases/: process_permit.py
src/permits/config/: container.py  settings.py
src/permits/domain/: exceptions.py
templates/: summary.html.j2
tests/: conftest.py
tests/integration/: test_api.py  test_extractor_and_repository.py  test_process_permit_use_case.py
tests/unit/: test_contract.py  test_permit_validator.py  test_value_objects.py
(+19 files in other folders)
