[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "permits-rpa"
version = "1.0.0"
description = "RPA para procesamiento de permisos: Power Automate Desktop orquesta, Python ejecuta la lógica de negocio (Clean Architecture, API First)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "RPA Developer" }]
keywords = ["rpa", "power-automate", "clean-architecture", "fastapi", "api-first"]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
    "jinja2>=3.1",
    "fpdf2>=2.7",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
weasyprint = ["weasyprint>=61.0"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
permits = "permits.presentation.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
